# aws-claude-code-assistant

./: .env.example  .gitignore  AWS_BEDROCK_SETUP.md  DOCKER_SETUP.md  DUAL_PROVIDER_CHANGES.md  EXAMPLES.md  FILE_STRUCTURE.md  GETTING_STARTED.md  QUICKSTART.md  README.md  START_HERE.md  WORKFLOW.md  agent.py  config.py  inspect_messages.py  main.py  pyproject.toml  run_tests.sh  setup.sh  test_providers.py  visualize_workflow.py
mcps/deno/: Dockerfile
tests/: __init__.py  test_local_tools.py
tools/: __init__.py  local_tools.py  mcp_tools.py
